--- a/example2.html
+++ b/example2.html
@@ -1,12 +1,36 @@
 <html>
-<body background="D:\HTML\images\yellow.jpg">
-<h1>Using Images in HTML files</h1>
-<img src="D:\HTML\images\Teddy-Bears-Picnic.jpg" height="40%" width="40%" border=10 align="right">
-<br>kdjgfkjgj<br><br><br>fglkflkhjfgjh<br><br><br><br>
-<br>kdjgfkjgj<br><br><br>fglkflkhjfgjh<br><br><br><br>
-<br>kdjgfkjgj<br><br><br>fglkflkhjfgjh<br><br><br><br>
-<hr>
-<center>
-<img src="D:\HTML\images\Teddy-Bears-Picnic.jpg" height="40%" width="40%" border=10>
-</center>
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<style>
+body {
+  font-family: "Sofia";
+  margin-top:100px;
+  }
+h1{  font-size: 72px; 
+	 border-style:solid;
+	 border-width:10px;
+	 border-color:red;
+	 border-radius:50px;
+	 padding:20px;
+	 }
+
+ p{font-family:serif comic sans ms tahoma;
+ font-size:x-large;
+ font-style:oblique;
+}
+#p1{font-family:tahoma;
+ font-size:x-large;
+ font-style:italic;
+ font-variant:small-caps;
+ font-weight:bolder;
+
+}
+</style>
+</head>
+<body>
+<h1>Main Heading will appear in Sofia Font</h1>
+<p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
+<p id="p1">This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
+</body>
 </html>
+
