--- a/example8.html
+++ b/example8.html
@@ -1,30 +1,46 @@
-<html>
-
-<head>
-    <title>Using Tables in creating HTML Layouts</title>
-</head>
-
-<body>
-    <table width="100%" border="0">
-        <tr>
-            <td colspan="2" bgcolor="#b5dcb3">
-                <h1>This is Web Page Main title</h1>
-            </td>
-        </tr>
-        <tr valign="top">
-            <td bgcolor="#aaa" width="50"><b>Main Menu</b><br /> Programming Languages<br />Website development<br />Database Management Systems</td>
-            <td bgcolor="#eee" width="100" height="200">
-                <h1> Aptech Computer Education , Sagar M.P.</h1>
-                <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
-                <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" bgcolor="#b5dcb3">
-                <center> Copyright Information Footer comes here</center>
-            </td>
-        </tr>
-    </table>
-</body>
-
+<!DOCTYPE html> 
+<html> 
+<head> 
+    <title>CSS transition-property property</title> 
+    <style> 
+    body{ 
+        text-align: center; 
+    } 
+  
+    h1, h2{ 
+        color: green; 
+    } 
+  	nav{
+	background-color:blue;
+	padding:10px;
+	 }
+	 a{color:white; }
+    a:visited{ 
+        color: red; 
+    } 
+	a:hover{
+	background-color:black;
+	padding:10px;
+	 }
+    </style> 
+</head> 
+  
+<body> 
+    <h1>CSS transition-property property</h1> 
+    <h2>:visited Pseudo-class</h2> 
+      
+    <nav> 
+        <a href="www.aptech-education.com/" target="_blank"> 
+            My color changes once you vist this link 
+        </a>
+		 <a href="www.aptech-education.com/" target="_blank"> 
+            My color changes once you vist this link 
+        </a>
+		 <a href="www.aptech-education.com/" target="_blank"> 
+            My color changes once you vist this link 
+        </a> 
+    </nav> 
+</body> 
+</html>                
+  </body>
 </html>
