--- a/prog14.html
+++ b/prog14.html
@@ -8,17 +8,17 @@
 <center>
 
     <hr color="green">
-    <nav>
-    <a href="pre.html">Home</a> ||
-    <a href="prog2.html">About us</a>||
-    <a href="prog4.html">Career</a>||
-    <a href="prog5.html">patnership</a>||
-    <a href="prog6.html">Field </a>||
-    <a href="prog7.html">Type of managment</a>||
-    <a href="prog8.html">Map</a>||
-    <a href="prog9.html">world</a>||
-    <a href="prog10.html">Contac us</a>
-    </nav>
+    <nav><ul><a href="pre.html">Home</a> 
+     <li><a href="prog2.html">About us</a></li> 
+     <li><a href="prog4.html">Career</a></li> 
+     <li> <a href="prog5.html">patnership</a></li> 
+     <li><a href="prog6.html">Field </a> </li> 
+     <li><a href="prog7.html">Type of managment</a> </li> 
+     <li> <a href="prog8.html">Map</a></li> 
+     <li> <a href="prog9.html">world</a></li> 
+     <li><a href="prog10.html">Contac us</a> </li> 
+      </nav> </ul>
+    
     <hr color="green">
 </center>
 <marquee bgcolor="blue" hight="20px">New demo whole html releated tag </marquee>
