--- a/pre8js.html
+++ b/pre8js.html
@@ -5,21 +5,19 @@
 </head>
 <body>
 <script>
-arr1=new Array(50);
+arr1=new array(10)
 for(i=1;i<=50;i++)
 {
-/*
-arr1[i]=parseInt(prompt("Enter any value:-"));
-*/
-if(arr1[i]%5==0)
+if(i%5==0)
 {
-arr1[i]+=i;
+for(i=1;i<=10;i++)
+{
+document.write("<br />",arr[i]);
 }
-document.write("<br />",arr1[i]);
 }
-
-
+}
 </script>
 
 </body>
 </html>
+
